syntax = 'proto3';

package execution;

message DoBlockRequest {
  bytes header = 1;
  repeated bytes transactions = 2;
}

message DoBlockResponse {
  bytes state_root = 1;
}

service ExecutionService {
  rpc DoBlock(DoBlockRequest) returns (DoBlockResponse);
}
